fixed logo and icon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>SplitIt - Easy Bill Splitting Web App</title>
-		<link rel="icon" type="image/png" href="media/logo/icon.png" />
+		<link rel="icon" type="image/png" href="media/icon.png" />
 		<meta
 			name="description"
 			content="SplitIt is a free, easy-to-use web app for splitting bills at restaurants, bars, and for groceries. Split bills accurately, calculate totals, and share details easily." />
@@ -313,11 +313,11 @@
 				class="container mx-auto px-6 py-3 flex justify-between items-center">
 				<a href="#" class="font-bold text-gray-800 dark:text-white">
 					<img
-						src="media/logo/logo.png"
+						src="media/logo.png"
 						alt="SplitIt Logo"
 						class="logo dark:hidden" />
 					<img
-						src="media/logo/logoDark.png"
+						src="media/logoDark.png"
 						alt="SplitIt Logo"
 						class="logo hidden dark:block" />
 				</a>
